src/objects/Test_Case__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of the Test Case</description>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preconditions__c</fullName>
        <description>The preconditions of the Test Case</description>
        <label>Preconditions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>The project that the test case is related to.</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The title of the Test Case</description>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <description>The link to the user story which the test case is related to.</description>
        <label>User Story</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <label>Test Case</label>
    <nameField>
        <displayFormat>TC-{0000000000}</displayFormat>
        <label>Test Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Insert_on_Ongoing_or_Proposed_Projects</fullName>
        <active>true</active>
        <description>This rule prevents creating a new Test Case if the related project status is not &quot;Ongoing&quot; or &quot;Proposed&quot;.</description>
        <errorConditionFormula>AND(NOT(ISPICKVAL(Project__r.Status__c, &apos;Ongoing&apos;)) ,NOT(ISPICKVAL(Project__r.Status__c, &apos;Proposed&apos;)))</errorConditionFormula>
        <errorMessage>Test Cases can only be related with Ongoing or Proposed Projects</errorMessage>
    </validationRules>
</CustomObject>